gitops/java/petclinic/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-dev
  namespace: petclinic-dev
