gitops/java/petclinic/overlays/dev/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: petclinic
spec:
  template:
    spec:
      containers:
      - imagePullPolicy: Always
        name: petclinic
  triggers:
  - imageChangeParams:
      containerNames:
      - petclinic
      from:
        kind: ImageStreamTag
        name: petclinic:dev
        namespace: cicd
    type: ImageChange
