gitops/java/petclinic/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  host: app-petclinic-dev.apps-crc.testing
status:
  ingress:
  - conditions:
    host: app-petclinic-dev.apps-crc.testing
